--- a/src/assets/i18n/en/auth.json
+++ b/src/assets/i18n/en/auth.json
@@ -2,5 +2,6 @@
   "ERROR": "Error!",
   "MSN_NOT_REGISTER": "The user dont exist in we database",
   "MSN_IS_DESACTIVED": "The user is inactived",
+  "MSN_INVALID": "Invalid token",
   "PASSWORD_INVALID": "Password invalid"
 }
