--- a/src/assets/i18n/es/auth.json
+++ b/src/assets/i18n/es/auth.json
@@ -2,5 +2,6 @@
   "ERROR": "Error!",
   "MSN_NOT_REGISTER": "El usuario no existe en nuestra base de datos",
   "MSN_IS_DESACTIVED": "El usuario se encuentra inactivo, porfavor contactar con el administrador",
+  "MSN_INVALID": "Token invalido",
   "PASSWORD_INVALID": "Contraseña invalida"
 }
