--- a/src/assets/i18n/es/modulo.json
+++ b/src/assets/i18n/es/modulo.json
@@ -6,5 +6,6 @@
   "MSN_PERMISO_REMOVIDO_OK": "eliminado exitosamente",
 
   "MSJ_ERROR_PERMISO_EXISTENTE": "Este permiso, ya existe en nuestra base de datos.",
-  "MSJ_ERROR_PERMISO_PADRE_NO_EXISTENTE": "No se puede realizar ninguna accion, el padre no existe en nuestra base de datos."
+  "MSJ_ERROR_PERMISO_PADRE_NO_EXISTENTE": "No se puede realizar ninguna accion, el padre no existe en nuestra base de datos.",
+  "MSJ_ERROR_PERMISO_TIENE_PERMISOS_HIJOS": "No se puede realizar ninguna accion, este permiso contiene permisos hijos."
 }
